feat: 식당 조회시 북마크 수량 조회 기능 (#204)
* feat: 식당 목록 조회시 북마크 개수 추가

* feat: 식당 상세 조회시 북마크 개수 추가

* refactor: 'Stream.collect(Collectors.toList())' -> 'Stream.toList()' 변경

* test: 식당의 북마크 수 필드 테스트 추가

* style: 코드 가독성 개선